--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <module>user-service</module>
         <module>email-service</module>
         <module>eureka-server</module>
+        <module>eureka-server</module>
+        <module>user-service</module>
     </modules>
 
     <properties>
