--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>eureka-server</module>
         <module>eureka-server</module>
         <module>user-service</module>
+        <module>email-service</module>
     </modules>
 
     <properties>
