--- a/email-service/pom.xml
+++ b/email-service/pom.xml
@@ -40,5 +40,17 @@
             <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.6.1</version>
+        </dependency>
     </dependencies>
 </project>
