--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -3,61 +3,31 @@ spring:
     active: ${SPRING_PROFILES_ACTIVE:dev}
   application:
     name: user-service
+  datasource:
+    url: jdbc:mysql://localhost:3306/user_service_dev?useSSL=false
+    username: root
+    password: root
+    driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
+    show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
-
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 jwt:
   secret: yourSecretKey
   expiration: 86400000 # 24 hours
 
----
-spring:
-  config:
-    activate:
-      on-profile: dev
-  datasource:
-    url: jdbc:mysql://localhost:3306/user_service_dev?createDatabaseIfNotExist=true
-    username: root
-    password: root
-server:
-  port: 8081
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
 
----
-spring:
-  config:
-    activate:
-      on-profile: qa
-  datasource:
-    url: jdbc:mysql://localhost:3306/user_service_qa?createDatabaseIfNotExist=true
-    username: root
-    password: root
-server:
-  port: 8081
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-
----
-spring:
-  config:
-    activate:
-      on-profile: prod
-  datasource:
-    url: jdbc:mysql://prod-db:3306/user_service_prod
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
-server:
-  port: 8081
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://eureka-server:8761/eureka/
+seed:
+  admin-email: ${SEED_ADMIN_EMAIL:admin@genericcompany.com}
+  admin-password: ${SEED_ADMIN_PASSWORD:admin123}
+  regular-user-email: ${SEED_REGULAR_USER_EMAIL:user@genericcompany.com}
+  regular-user-password: ${SEED_REGULAR_USER_PASSWORD:user123}
+  dev-user-email: ${SEED_DEV_USER_EMAIL:dev@genericcompany.com}
+  dev-user-password: ${SEED_DEV_USER_PASSWORD:dev123}
+  qa-user-email: ${SEED_QA_USER_EMAIL:qa@genericcompany.com}
+  qa-user-password: ${SEED_QA_USER_PASSWORD:qa123}
+  tester-email: ${SEED_TESTER_EMAIL:tester@genericcompany.com}
+  tester-password: ${SEED_TESTER_PASSWORD:test123}
