--- a/email-service/src/main/resources/application.yml
+++ b/email-service/src/main/resources/application.yml
@@ -4,60 +4,13 @@ spring:
   application:
     name: email-service
   mail:
+    host: smtp.gmail.com
+    port: 587
+    username: your-email@gmail.com
+    password: your-generated-app-password
     properties:
       mail:
         smtp:
           auth: true
           starttls:
             enable: true
-
----
-spring:
-  config:
-    activate:
-      on-profile: dev
-  mail:
-    host: smtp.gmail.com
-    port: 587
-    username: dev-test@genericcompany.com
-    password: your-dev-password
-server:
-  port: 8082
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-
----
-spring:
-  config:
-    activate:
-      on-profile: qa
-  mail:
-    host: smtp.gmail.com
-    port: 587
-    username: qa-test@genericcompany.com
-    password: your-qa-password
-server:
-  port: 8082
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-
----
-spring:
-  config:
-    activate:
-      on-profile: prod
-  mail:
-    host: smtp.gmail.com
-    port: 587
-    username: ${MAIL_USERNAME}
-    password: ${MAIL_PASSWORD}
-server:
-  port: 8082
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://eureka-server:8761/eureka/
