--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>eureka-server</module>
         <module>user-service</module>
         <module>email-service</module>
+        <module>api-gateway</module>
     </modules>
 
     <properties>
