--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -18,6 +18,8 @@ spring:
   flyway:
     locations: classpath:db/migration
     baseline-on-migrate: true
+    baseline-version: 1
+    baseline-description: "Existing schema baseline"
 
 jwt:
   secret: yourSecretKey
