--- a/eureka-server/Dockerfile.dev
+++ b/eureka-server/Dockerfile.dev
@@ -2,13 +2,11 @@ FROM maven:3.6-jdk-8
 
 WORKDIR /app
 
-# Install spring-boot-devtools for hot reload
-RUN mkdir -p /root/.m2
-COPY pom.xml /app/pom.xml
-RUN mvn dependency:go-offline
+# Copy the parent pom first
+COPY pom.xml ./pom.xml
+COPY eureka-server/pom.xml ./eureka-server/pom.xml
+COPY eureka-server/src ./eureka-server/src
 
-# Copy source code
-COPY src /app/src
+WORKDIR /app/eureka-server
 
-# Run the application with spring-boot-devtools
-CMD ["mvn", "spring-boot:run", "-Dspring-boot.run.jvmArguments='-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005'"]
+CMD ["mvn", "spring-boot:run"]
