--- a/email-service/Dockerfile.dev
+++ b/email-service/Dockerfile.dev
@@ -2,13 +2,11 @@ FROM maven:3.6-jdk-8
 
 WORKDIR /app
 
-# Install spring-boot-devtools for hot reload
-RUN mkdir -p /root/.m2
-COPY pom.xml /app/pom.xml
-RUN mvn dependency:go-offline
+# Copy the parent pom first
+COPY pom.xml ./pom.xml
+COPY email-service/pom.xml ./email-service/pom.xml
+COPY email-service/src ./email-service/src
 
-# Copy source code
-COPY src /app/src
+WORKDIR /app/email-service
 
-# Run the application with spring-boot-devtools
-CMD ["mvn", "spring-boot:run", "-Dspring-boot.run.jvmArguments='-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005'"]
+CMD ["mvn", "spring-boot:run"]
