feat(SUPER-09): add env variables support
add README.md file

fix delete user endpoint at UserController.java

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,32 @@
+# Server Ports
+USER_SERVICE_PORT=8081
+EMAIL_SERVICE_PORT=8082
+API_GATEWAY_PORT=8080
+EUREKA_PORT=8761
+
 # MySQL
 MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=user_service_dev
+MYSQL_PASSWORD=root
+MYSQL_USER=root
 MYSQL_PORT=3306
 
-# Ports
-EUREKA_PORT=8761
-USER_SERVICE_PORT=8081
-EMAIL_SERVICE_PORT=8082
-GATEWAY_PORT=8080
+# JWT
+JWT_SECRET=your_secret_key
+JWT_EXPIRATION=86400000
+
+# Email Service
+MAIL_USERNAME=corplegal10.12.2019@gmail.com
+MAIL_PASSWORD="ftbj pevq rtza xcia"
+
+# User Seeder
+SEED_ADMIN_EMAIL=admin@genericcompany.com
+SEED_ADMIN_PASSWORD=admin123
+SEED_REGULAR_USER_EMAIL=user@genericcompany.com
+SEED_REGULAR_USER_PASSWORD=user123
+SEED_DEV_USER_EMAIL=dev@genericcompany.com
+SEED_DEV_USER_PASSWORD=dev123
+SEED_QA_USER_EMAIL=qa@genericcompany.com
+SEED_QA_USER_PASSWORD=qa123
+SEED_TESTER_EMAIL=tester@genericcompany.com
+SEED_TESTER_PASSWORD=test123
