--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -42,6 +42,19 @@ services:
       - SPRING_DATASOURCE_PASSWORD=${MYSQL_ROOT_PASSWORD:-root}
       - SPRING_DATASOURCE_DRIVER_CLASS_NAME=com.mysql.jdbc.Driver
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
+      - JWT_SECRET=${JWT_SECRET}
+      - JWT_EXPIRATION=${JWT_EXPIRATION}
+      - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
+      - SEED_ADMIN_EMAIL=${SEED_ADMIN_EMAIL}
+      - SEED_ADMIN_PASSWORD=${SEED_ADMIN_PASSWORD}
+      - SEED_REGULAR_USER_EMAIL=${SEED_REGULAR_USER_EMAIL}
+      - SEED_REGULAR_USER_PASSWORD=${SEED_REGULAR_USER_PASSWORD}
+      - SEED_DEV_USER_EMAIL=${SEED_DEV_USER_EMAIL}
+      - SEED_DEV_USER_PASSWORD=${SEED_DEV_USER_PASSWORD}
+      - SEED_QA_USER_EMAIL=${SEED_QA_USER_EMAIL}
+      - SEED_QA_USER_PASSWORD=${SEED_QA_USER_PASSWORD}
+      - SEED_TESTER_EMAIL=${SEED_TESTER_EMAIL}
+      - SEED_TESTER_PASSWORD=${SEED_TESTER_PASSWORD}
     depends_on:
       mysql:
         condition: service_healthy
@@ -60,6 +73,12 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=dev
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
+      - SPRING_MAIL_USERNAME=${MAIL_USERNAME}
+      - SPRING_MAIL_PASSWORD=${MAIL_PASSWORD}
+      - SPRING_MAIL_HOST=smtp.gmail.com
+      - SPRING_MAIL_PORT=587
+      - SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH=true
+      - SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE=true
     depends_on:
       - eureka-server
 
@@ -68,12 +87,15 @@ services:
       context: .
       dockerfile: api-gateway/Dockerfile.dev
     ports:
-      - "${GATEWAY_PORT:-8080}:8080"
+      - "${API_GATEWAY_PORT:-8080}:${API_GATEWAY_PORT:-8080}"
     volumes:
       - ./:/app
       - ~/.m2:/root/.m2
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+      - SERVER_PORT=${API_GATEWAY_PORT}
+      - JWT_SECRET=${JWT_SECRET}
+      - JWT_EXPIRATION=${JWT_EXPIRATION}
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka/
     depends_on:
       - eureka-server
