--- a/email-service/src/main/resources/application-prod.yml
+++ b/email-service/src/main/resources/application-prod.yml
@@ -13,3 +13,14 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://eureka-server:8761/eureka/
+
+management:
+  security:
+    enabled: false
+  context-path: /
+
+endpoints:
+  health:
+    path: /health
+  info:
+    path: /info
