--- a/user-service/src/main/resources/application-qa.yml
+++ b/user-service/src/main/resources/application-qa.yml
@@ -1,5 +1,7 @@
 spring:
-  profiles: dev
+  config:
+    activate:
+      on-profile: qa
   datasource:
     url: jdbc:mysql://localhost:3306/user_service_dev?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
     username: ${MYSQL_USER:root}
